// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormLegend is rendered 1`] = `
<legend
  aria-label="aria-label"
  class="euiFormLegend testClass1 testClass2 emotion-euiFormLegend-euiTestCss"
  data-test-subj="test subject string"
>
  Legend
</legend>
`;

exports[`EuiFormLegend props compressed is rendered 1`] = `
<legend
  class="euiFormLegend emotion-euiFormLegend-compressed"
>
  Legend
</legend>
`;

exports[`EuiFormLegend props hidden is rendered 1`] = `
<legend
  class="euiFormLegend euiFormLegend-isHidden emotion-euiFormLegend"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Legend
  </span>
</legend>
`;
